# tainter

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: build.yml  kubeconform.yml  lint.yml  main-push.yml  pr-push.yml  publish.yml  tag-push.yml  test-end-to-end.yml  test.yml
deploy/: config.toml  deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml
settings/: tainter.toml
src/: main.rs
src/reconciler/: mod.rs
src/reconciler/testfiles/: list-nodes-eligible-and-has-taint.json  list-nodes-multiple-eligible-regex.json  list-nodes-multiple-eligible.json  list-nodes-no-taints.json  list-nodes-single-eligible.json  list-nodes.json  node-put-conflict-response.json  node-put-success.json
src/settings/: mod.rs
src/settings/testfiles/: empty_taint_key.toml  empty_taint_value.toml  incomplete.toml  invalid_condition_status_regex.toml  invalid_condition_type_regex.toml  invalid_log_max_level.toml  invalid_taint_effect.toml
src/tainter/: mod.rs
tests/: end_to_end.rs  kustomization.yaml
