[package]
name = "tainter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
kube = { version = "0.90.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.1", features = ["latest"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["macros"] }
tower-test = "0.4.0"
tower = "0.4.13"
http = "1.1.0"
tracing-test = "0.2.4"
chrono = "0.4.38"
