[package]
name = "tainter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
kube = { version = "0.90.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.1", features = ["latest"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "rt"] }
tower-test = "0.4.0"
tower = "0.4.13"
http = "1.1.0"
tracing-test = "0.2.4"
chrono = "0.4.38"
regex = "1.10.6"
config = { version = "0.14.0", features = ["toml"] }
serde = "1.0.210"
strum_macros = "0.26.4"
strum = "0.26.3"
validator = { version = "0.18.1", features = ["derive"] }
thiserror = "1.0.64"
clap = { version = "4.5.20", features = ["derive"] }

[dev-dependencies]
test-case = "3.3.1"
reqwest = { version = "0.12.9", features = ["blocking"] }

[[bin]]
edition = "2021"
name = "tainter"
path = "src/main.rs"
